--- a/assets/html/desbloqueo.html
+++ b/assets/html/desbloqueo.html
@@ -7,6 +7,7 @@
    
     <!-- ESTILOS -->
     <link rel="stylesheet" href="assets/css/styles">
+    <link rel="stylesheet" href="../css/desbloqueo.css">
 
     <!--Bootstrap CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -25,21 +26,17 @@
                     <li class="nav-item"><a class="nav-link" href="assets/html/soporte.html">Soporte</a></li>
                     <li class="nav-item"><a class="nav-link" href="assets/html/login.html">Iniciar sesión</a></li>
                     <li class="nav-item"><a class="nav-link" href="assets/html/register.html">Registro</a></li>
-                    <form class="d-flex" role="search">
-                        <input class="form-control " type="search" aria-label="Search">
-                        <button class="btn btn-outline-light" type="submit" id="searchInput">
-                            <i class="bi bi-search"></i>
-                        </button>
-                      </form>
                 </ul>
             </div>
         </nav>
-        <h2>Tu cuenta está bloqueada</h2>
     </header>
 
     <main>
-        <p>Para recuperar el acceso, haz clic en el botón de abajo y sigue los pasos.</p>
-        <button id="btn-desbloquear">Desbloquear tu cuenta</button>
+        <div class="cont-bloq">
+            <h2>Tu cuenta está bloqueada 🚫</h2>
+            <p>Para recuperar el acceso, haz clic en el botón de abajo y sigue los pasos.</p>
+            <button id="btn-desbloquear" class="btn-desbloquear">Desbloquear tu cuenta 🔓</button>
+        </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
