--- a/assets/html/register.html
+++ b/assets/html/register.html
@@ -36,7 +36,7 @@
     <main class="container d-flex flex-column align-items-center justify-content-center  overflow-hidden">
         
         <!-- FORMULARIO DE REGISTRO -->
-        <section id="register-section" class="card shadow p-1 mx-auto d-flex flex-row mt-n5" style="max-width: 1100px; width: 1500px;">
+        <section id="register-section" class="card shadow p-1 mx-auto d-flex flex-row mt-n5" >
             <div class="register-image d-none d-md-flex justify-content-center align-items-center">
                 <img src="../img/yapito-happy-with-raised-hands.svg" style="width: 270px; margin: 10px;" alt="">
             </div>
