--- a/assets/html/soporte.html
+++ b/assets/html/soporte.html
@@ -6,6 +6,7 @@
     <title>Ayuda y Soporte - Yape</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/soporte.css">
 </head>
 <body>
     <header>
@@ -36,22 +37,28 @@
         </div>
     </header>
 
-    <h1>Ayuda y Soporte - Yape</h1>
-    <main class="container mt-5">
+    <header class="text-center py-4">
+        <h1 class="title">Ayuda y Soporte - Yape</h1>
+    </header>
+
+    <main class="container ">
         <div class="row justify-content-center">
-            <div class="col-md-8">
-                <h2>Preguntas Frecuentes (FAQ)</h2>
-                <div class="mb-4">
+            <div class="col-md-8 card p-4 shadow">
+                <h2 class="text-center mb-4"> Preguntas Frecuentes (FAQ)</h2>
+
+                <div class="faq-item">
                     <h5>¿Cómo puedo bloquear mi cuenta?</h5>
                     <p>Para bloquear tu cuenta, ingresa a la sección "Bloquear tu cuenta" en el menú principal y sigue los pasos indicados.</p>
                 </div>
-                <div class="mb-4">
+
+                <div class="faq-item">
                     <h5>¿Qué hago si no recuerdo mi contraseña?</h5>
                     <p>Si olvidaste tu contraseña, dirígete a la página de recuperación de cuenta y sigue los pasos para restablecerla.</p>
                 </div>
 
-                <h2>¿Necesitas más ayuda?</h2>
-                <form>
+                <h2 class="text-center mt-4"> ¿Necesitas más ayuda?</h2>
+
+                <form class="mt-3">
                     <div class="mb-3">
                         <label for="contactEmail" class="form-label">Correo Electrónico</label>
                         <input type="email" class="form-control" id="contactEmail" placeholder="Tu correo">
@@ -60,16 +67,14 @@
                         <label for="contactMessage" class="form-label">Mensaje</label>
                         <textarea class="form-control" id="contactMessage" rows="4" placeholder="Escribe tu mensaje"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Enviar</button>
+                    <button type="submit" class="btn btn-success w-100">Enviar Mensaje</button>
                 </form>
             </div>
         </div>
     </main>
 
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 Yape. Todos los derechos reservados.</p>
-    </footer>
 
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
     <script type="module" src="../js/soporte.js"></script>
 </body>
