--- a/assets/html/desbloqueo.html
+++ b/assets/html/desbloqueo.html
@@ -6,27 +6,66 @@
     <title>Desbloquear Cuenta</title>
    
     <!-- ESTILOS -->
-    <link rel="stylesheet" href="assets/css/styles">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/desbloqueo.css">
 
     <!--Bootstrap CDN-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#"><img class="logo" src="assets/img/Yape_Blanco_Verde.png" alt="Logo Yape"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="assets/html/seguridad.html">Seguridad</a></li>
-                    <li class="nav-item"><a class="nav-link" href="assets/html/soporte.html">Soporte</a></li>
-                    <li class="nav-item"><a class="nav-link" href="assets/html/login.html">Iniciar sesión</a></li>
-                    <li class="nav-item"><a class="nav-link" href="assets/html/register.html">Registro</a></li>
-                </ul>
+        <div class="menu-1">
+            <nav class="navbar fixed-top navbar-expand-lg" >
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img class="logo" src="..//img/Yape_Blanco_Verde.png" alt="Logo Yape"></a>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                        <ul class="menu1-ul">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="seguridad.html">Seguridad</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="soporte.html">Soporte</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../html/desbloqueo.html">Desbloquear cuenta</a>
+                            </li>
+                            
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <!--Nav Responsive-->
+        <nav class="navbar bg-body-tertiary fixed-top menu-2">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img class="logo" src="assets/img/Yape_Blanco_Verde.png" alt="Logo Yape"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="seguridad.html">Seguridad</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="soporte.html">Soporte</a>
+                            </li>
+                        </ul>
+                        <!-- <button id="btn-cerrar-sesion" style="display: none;">Cerrar sesión</button> -->
+                    </div>
+                </div>
             </div>
         </nav>
     </header>
@@ -39,7 +78,9 @@
         </div>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="../js/desbloqueo.js"></script>
 </body>
 </html>
