--- a/assets/html/register.html
+++ b/assets/html/register.html
@@ -96,9 +96,11 @@
         </section>
 
         <!-- FORMULARIO DE INICIO DE SESIÓN -->
-        <section id="login-section" class="card shadow p-4 d-none" style="max-width: 400px; width: 100%; margin-top: -80px;">
+        <section id="login-section" class="card shadow p-4 d-none" style="max-width: 900px; width: 100%;">
             <!-- Contenedor de la imagen -->
-            <div class="login-image d-none d-md-block" style="width: 320px; background: url('') center/cover no-repeat; border-radius: 8px;"></div>
+            <div class="login-image d-none d-md-block" >
+                <img src="../img/yapito-saul.svg" style="width: 270px; margin: 10px;" alt="">
+            </div>
 
             <article class="card-body">
                 <h2 class="text-center mb-4">Iniciar Sesión</h2>
@@ -109,7 +111,7 @@
                         <div class="mb-3">
                             <label for="email" class="form-label">Correo:</label>
                             <div class="input-group">
-                                <span class="input-group-text"><i class="bi bi-envelope"></i></span>
+
                                 <input type="email" class="form-control" id="email" required placeholder="Ingresa tu correo">
                             </div>
                         </div>
@@ -117,7 +119,7 @@
                         <div class="mb-3">
                             <label for="password" class="form-label">Contraseña:</label>
                             <div class="input-group">
-                                <span class="input-group-text"><i class="bi bi-eye-slash" id="toggle-password"></i></span>
+    
                                 <input type="password" class="form-control" id="password" required placeholder="Ingresa tu contraseña">
                             </div>
                         </div>
@@ -137,6 +139,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
 
+    <!-- Email -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </body>
 </html>
