--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="icon" href="assets/img/Yape_Blanco_Verde.png" type="image/png"> -->
+    <link rel="icon" href="assets/img/Yape_Blanco_Verde.png" type="image/png">
     <title>Bloqueo de Cuenta - Yape</title>
     
     <!-- ESTILOS -->
@@ -66,10 +66,13 @@
                                 <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="assets/html/seguridad.html">Seguridad</a>
+                                <a class="nav-link active" href="assets/html/seguridad.html">Seguridad</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="assets/html/soporte.html">Soporte</a>
+                                <a class="nav-link active" href="assets/html/soporte.html">Soporte</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="assets/html/desbloqueo.html">Desbloquear cuenta</a>
                             </li>
                         </ul>
                         <!-- <button id="btn-cerrar-sesion" style="display: none;">Cerrar sesión</button> -->
