--- a/assets/html/desbloqueo.html
+++ b/assets/html/desbloqueo.html
@@ -6,7 +6,6 @@
     <title>Desbloquear Cuenta</title>
    
     <!-- ESTILOS -->
-    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/desbloqueo.css">
 
     <!--Bootstrap CDN-->
@@ -18,7 +17,7 @@
         <div class="menu-1">
             <nav class="navbar fixed-top navbar-expand-lg" >
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logo" src="..//img/Yape_Blanco_Verde.png" alt="Logo Yape"></a>
+                    <a class="navbar-brand" href="#"><img class="logo" src="../img/Yape_Blanco_Verde.png" alt="Logo Yape"></a>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="menu1-ul">
                             <li class="nav-item">
@@ -57,10 +56,10 @@
                                 <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="seguridad.html">Seguridad</a>
+                                <a class="nav-link active" href="seguridad.html">Seguridad</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="soporte.html">Soporte</a>
+                                <a class="nav-link active" href="soporte.html">Soporte</a>
                             </li>
                         </ul>
                         <!-- <button id="btn-cerrar-sesion" style="display: none;">Cerrar sesión</button> -->
