--- a/assets/html/seguridad.html
+++ b/assets/html/seguridad.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/img/Yape_Blanco_Verde.png" type="image/png">
+    <link rel="icon" href="../img/Yape_Blanco_Verde.png" type="image/png">
     <title>Seguridad en Yape</title>
     <!-- Estilos y Bootstrap -->
     <link rel="stylesheet" href="../css/seguridad.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--Bootstrap Icons-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <script src="https://kit.fontawesome.com/988110bf96.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -15,7 +20,7 @@
         <div class="menu-1">
             <nav class="navbar fixed-top navbar-expand-lg" >
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logo" src="..//img/Yape_Blanco_Verde.png" alt="Logo Yape"></a>
+                    <a class="navbar-brand" href="#"><img class="logo" src="../img/Yape_Blanco_Verde.png" alt="Logo Yape"></a>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="menu1-ul">
                             <li class="nav-item">
@@ -28,7 +33,7 @@
                                 <a class="nav-link" href="soporte.html">Soporte</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../html/desbloqueo.html">Desbloquear cuenta</a>
+                                <a class="nav-link active" aria-current="page" href="desbloqueo.html">Desbloquear cuenta</a>
                             </li>
                             
                         </ul>
@@ -39,7 +44,7 @@
         <!--Nav Responsive-->
         <nav class="navbar bg-body-tertiary fixed-top menu-2">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img class="logo" src="assets/img/Yape_Blanco_Verde.png" alt="Logo Yape"></a>
+                <a class="navbar-brand" href="#"><img class="logo" src="../img/Yape_Blanco_Verde.png" alt="Logo Yape"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -57,7 +62,7 @@
                                 <a class="nav-link" href="seguridad.html">Seguridad</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="oporte.html">Soporte</a>
+                                <a class="nav-link" href="soporte.html">Soporte</a>
                             </li>
                         </ul>
                         <!-- <button id="btn-cerrar-sesion" style="display: none;">Cerrar sesión</button> -->
