--- a/assets/html/soporte.html
+++ b/assets/html/soporte.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda y Soporte - Yape</title>
+    <!--Bootstrap Icons-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <script src="https://kit.fontawesome.com/988110bf96.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/soporte.css">
 </head>
 <body>
@@ -27,8 +32,11 @@
                                 <a class="nav-link" href="soporte.html">Soporte</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../html/desbloqueo.html">Desbloquear cuenta</a>
+                                <a class="nav-link active" aria-current="page" href="desbloqueo.html">Desbloquear cuenta</a>
                             </li>
+                            <!-- <li class="nav-item">
+                                <button id="btn-cerrar-sesion" style="display: none;">Cerrar sesión</button>
+                            </li> -->
                             
                         </ul>
                     </div>
@@ -38,7 +46,7 @@
         <!--Nav Responsive-->
         <nav class="navbar bg-body-tertiary fixed-top menu-2">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img class="logo" src="assets/img/Yape_Blanco_Verde.png" alt="Logo Yape"></a>
+                <a class="navbar-brand" href="#"><img class="logo" src="../img/Yape_Blanco_Verde.png" alt="Logo Yape"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -53,10 +61,13 @@
                                 <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="seguridad.html">Seguridad</a>
+                                <a class="nav-link active" href="seguridad.html">Seguridad</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="soporte.html">Soporte</a>
+                                <a class="nav-link active" href="soporte.html">Soporte</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="desbloqueo.html">Desbloquear cuenta</a>
                             </li>
                         </ul>
                         <!-- <button id="btn-cerrar-sesion" style="display: none;">Cerrar sesión</button> -->
@@ -66,9 +77,8 @@
         </nav>
     </header>
 
-    <header class="text-center py-4">
-        <h1 class="title">Ayuda y Soporte - Yape</h1>
-    </header>
+    <h1 class="title pt-5">Ayuda y Soporte - Yape</h1>
+
 
     <main class="container ">
         <div class="row justify-content-center">
