--- a/assets/html/seguridad.html
+++ b/assets/html/seguridad.html
@@ -7,6 +7,7 @@
     <title>Seguridad en Yape</title>
     <!-- Estilos y Bootstrap -->
     <link rel="stylesheet" href="../css/seguridad.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!--Bootstrap Icons-->
     <link
@@ -42,38 +43,38 @@
             </nav>
         </div>
         <!--Nav Responsive-->
-        <nav class="navbar bg-body-tertiary fixed-top menu-2">
+        <nav class="navbar bg-body-tertiary fixed-top  menu-2">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img class="logo" src="../img/Yape_Blanco_Verde.png" alt="Logo Yape"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="seguridad.html">Seguridad</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="soporte.html">Soporte</a>
-                            </li>
-                        </ul>
-                        <!-- <button id="btn-cerrar-sesion" style="display: none;">Cerrar sesión</button> -->
-                    </div>
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
+
+                <div class="offcanvas-body">
+                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="seguridad.html">Seguridad</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="soporte.html">Soporte</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="desbloqueo.html">Desbloquear cuenta</a>
+                    </li>
+                  </ul>
                 </div>
+              </div>
             </div>
-        </nav>
+          </nav>
     </header>
 
     <main>
-        <section class="container my-5">
+        <section class="principal-seguridad container my-5">
             <h1 class="text-center mb-1"><span class="text-fucsia">Protege </span> tu <span class="text-fucsia">Cuenta</span> de Yape</h1>
             <p class="lead">En Yape, nos importa la seguridad de tu cuenta. A continuación te mostramos algunos consejos y pasos a seguir para proteger tu cuenta en caso de robo o pérdida de tu dispositivo.</p>
             
